deploy/backups/backup-deployment-20250813-213253.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "25"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"21"},"creationTimestamp":"2025-08-07T14:15:16Z","generation":26,"labels":{"app":"safety-amp","component":"agent"},"name":"safety-amp-agent","namespace":"safety-amp","resourceVersion":"10423335","uid":"d0fea87e-c1db-4630-90b7-f3a8d32d28ce"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"safety-amp","component":"agent"}}," [...]
  creationTimestamp: "2025-08-07T14:15:16Z"
  generation: 32
  labels:
    app: safety-amp
    component: agent
  name: safety-amp-agent
  namespace: safety-amp
  resourceVersion: "10476461"
  uid: d0fea87e-c1db-4630-90b7-f3a8d32d28ce
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: safety-amp
      component: agent
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        azure.monitor.metrics.path: /metrics
        azure.monitor.metrics.port: "9090"
        azure.monitor.metrics.scrape: "true"
        kubectl.kubernetes.io/restartedAt: "2025-08-13T14:02:24-05:00"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: safety-amp
        azure.workload.identity/use: "true"
        component: agent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/mode
                operator: In
                values:
                - user
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - safety-amp
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - python
        - main.py
        image: iiusacr.azurecr.io/safety-amp-agent:v20250813-1930
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: safety-amp-agent
        ports:
        - containerPort: 8080
          name: health
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: acr-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: safety-amp-workload-identity-sa
      serviceAccountName: safety-amp-workload-identity-sa
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-08-13T19:02:13Z"
    lastUpdateTime: "2025-08-13T19:02:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-13T20:51:48Z"
    lastUpdateTime: "2025-08-13T20:51:48Z"
    message: ReplicaSet "safety-amp-agent-f74f96bfc" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 32
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
