deploy/backups/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safety-amp-agent
  namespace: safety-amp
spec:
  template:
    spec:
      containers:
      - name: safety-amp-agent
        image: iiusacr.azurecr.io/safety-amp-agent:v2
      - name: fluentbit-sidecar
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 2020
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 2020
          initialDelaySeconds: 5
          periodSeconds: 10
